[gd_scene load_steps=6 format=3 uid="uid://crs3nja17fdkg"]

[ext_resource type="Theme" uid="uid://3m8ix4kn3aoe" path="res://resources/themes/default_theme.tres" id="1_hxagi"]
[ext_resource type="Script" path="res://code/menus/main/main_menu.gd" id="2_3lfwf"]
[ext_resource type="Texture2D" uid="uid://cjr3lq48hmiv3" path="res://assets/art/mainmenu.png" id="3_gyqh4"]
[ext_resource type="PackedScene" uid="uid://bixuvnj0ukhsj" path="res://code/code_resources/button_sound.tscn" id="3_js0nh"]
[ext_resource type="AudioStream" uid="uid://blhory67j5igr" path="res://assets/sound/Spooktober_Music_Menu_1.0.ogg" id="5_pgh8q"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hxagi")
script = ExtResource("2_3lfwf")
metadata/_edit_vertical_guides_ = []

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_gyqh4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -88.0
offset_right = 48.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Start" parent="Panel/VBoxContainer" instance=ExtResource("3_js0nh")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Start"

[node name="Settings" parent="Panel/VBoxContainer" instance=ExtResource("3_js0nh")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Settings"

[node name="Credits" parent="Panel/VBoxContainer" instance=ExtResource("3_js0nh")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Credits"

[node name="Exit" parent="Panel/VBoxContainer" instance=ExtResource("3_js0nh")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pgh8q")
volume_db = -18.0
autoplay = true
bus = &"Music"

[connection signal="button_up" from="Panel/VBoxContainer/Start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/Settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/Credits" to="." method="_on_credits_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/Exit" to="." method="_on_exit_button_up"]
